finish formation
