# src/infrastructure/api/controllers/book/book.controller.ts
@@ -1,4 +1,4 @@
-import { Body, Controller, Delete, Get, Path, Post, Route, Security, SuccessResponse, Tags } from "tsoa";
+import { Body, Controller, Delete, Get, Path, Post, Response, Route, Security, SuccessResponse, Tags } from "tsoa";
 import { GetBookOutputDto, GetBooksOutputDto, PostBookInputDto, PostBookOutputDto } from "./dto";
 import { createBookCodec, getBookCodec } from "./book.codec";
 
@@ -6,6 +6,7 @@ import CreateBookUseCase from "../../../../core/use-cases/create-book.use-case";
 import DeleteBookUseCase from "../../../../core/use-cases/delete-book.use-case";
 import GetBookUseCase from "../../../../core/use-cases/get-book.use-case";
 import ListBooksUseCase from "../../../../core/use-cases/list-books.use-case";
+import { InvalidInputError, NotFoundError } from "../../error-handler";
 
 @Route("books")
 @Tags("Books")
@@ -32,15 +33,17 @@ export class BookController extends Controller {
      */
     @Get("{id}")
     @SuccessResponse(200)
+    @Response(400, "Invalid request params")
+    @Response(404, "Not found")
     async getById(@Path() id: string): Promise<GetBookOutputDto> {
         const bookId = getBookCodec.decodBookId(id);
         if(!bookId.success){
-            throw "Invalid book id format";
+            throw new InvalidInputError("Invalid book id format");
         }
 
         const book = await new GetBookUseCase().execute(bookId.data);
         if(book === "BOOK_NOT_FOUND") {
-            throw "BOOK_NOT_FOUND";
+            throw new NotFoundError("BOOK_NOT_FOUND");
         }
         return book;
     }
@@ -51,13 +54,14 @@ export class BookController extends Controller {
      */
     @Post()
     @SuccessResponse(201)
+    @Response(400, "Invalid request params")
     async create(
         @Body() requestBody: PostBookInputDto
     ): Promise<PostBookOutputDto> {
         const decodingResult = createBookCodec.decode(requestBody);
 
         if(!decodingResult.success){
-            throw decodingResult.error.toString();
+            throw new InvalidInputError(decodingResult.error.toString());
         }
         
         return await new CreateBookUseCase().execute(requestBody);
@@ -69,6 +73,7 @@ export class BookController extends Controller {
      */
     @Delete("{id}")
     @SuccessResponse(204)
+    @Response(404, "Not found")
     async delete(@Path() id: string): Promise<void> {
         const bookId = getBookCodec.decodBookId(id);
 
@@ -78,7 +83,7 @@ export class BookController extends Controller {
         const result = await new DeleteBookUseCase().execute(bookId.data);
 
         if(result === "BOOK_NOT_FOUND") {
-            throw "BOOK_NOT_FOUND";
+            throw new NotFoundError("BOOK_NOT_FOUND");
         }
     }
 }
