# src/infrastructure/api/controllers/user/user.controller.ts
@@ -1,8 +1,9 @@
-import { Body, Controller, Post, Route, SuccessResponse, Tags } from "tsoa";
+import { Body, Controller, Post, Response, Route, SuccessResponse, Tags } from "tsoa";
 import { PostUserInputDto, PostUserOutputDto } from "./dto";
 import { createUserCodec } from "./user.codec";
 import SignInUserUseCase from "../../../../core/use-cases/sign-in-user.use-case";
 import SignUpUserUseCase from "../../../../core/use-cases/sign-up-user.use-case";
+import { ConflictError, InvalidInputError, NotFoundError } from "../../error-handler";
 
 @Route("user")
 @Tags("User")
@@ -17,13 +18,15 @@ export class UserController extends Controller{
      */
     @Post("/signin")
     @SuccessResponse(200)
+    @Response(400, "Invalid request params")
+    @Response(404, "Not found")
     async signin(
         @Body() requestBody: PostUserInputDto
     ): Promise<PostUserOutputDto> {
         const decodingResult = createUserCodec.decode(requestBody);
 
         if(!decodingResult.success) {
-            throw decodingResult.error.toString();
+            throw new InvalidInputError(decodingResult.error.toString());
         }
 
         const user = await new SignInUserUseCase().execute(
@@ -32,7 +35,7 @@ export class UserController extends Controller{
         );
 
         if(user === "USER_NOT_FOUND") {
-            throw "USER_NOT_FOUND";
+            throw new NotFoundError("USER_NOT_FOUND");
         }
 
         return user;
@@ -44,19 +47,21 @@ export class UserController extends Controller{
      */
         @Post("/signup")
         @SuccessResponse(200)
+        @Response(400, "Invalid request params")
+        @Response(409, "Already Exist")
         async signup(
             @Body() requestBody: PostUserInputDto
         ): Promise<PostUserOutputDto> {
             const decodingResult = createUserCodec.decode(requestBody);
     
             if(!decodingResult.success) {
-                throw decodingResult.error.toString();
+                throw new InvalidInputError(decodingResult.error.toString());
             }
     
             const user = await new SignUpUserUseCase().execute(decodingResult.data);
     
             if(user === "USER_ALREADY_EXISTS") {
-                throw "USER_ALREADY_EXISTS";
+                throw new ConflictError("USER_ALREADY_EXISTS");;
             }
     
             return user;
